--- a/gb/21/12/10/n13429834.md
+++ b/gb/21/12/10/n13429834.md
@@ -1,21 +1,25 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zyidbr337/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/zyidbr337/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/zyidbr337/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zyidbr337/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/zyidbr337/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zyidbr337/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/zyidbr337/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zyidbr337/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/zyidbr337/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zyidbr337/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/zyidbr337/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zyidbr337/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/zyidbr337/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zyidbr337/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/zyidbr337/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zyidbr337/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/zyidbr337/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/zyidbr337/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/zyidbr337/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/zyidbr337/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zyidbr337/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/zyidbr337/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zyidbr337/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zyidbr337/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zyidbr337/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zyidbr337/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zyidbr337/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zyidbr337/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zyidbr337/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zyidbr337/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zyidbr337/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zyidbr337/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zyidbr337/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/zyidbr337/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zyidbr337/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zyidbr337/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zyidbr337/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zyidbr337/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zyidbr337/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zyidbr337/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zyidbr337/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zyidbr337/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zyidbr337/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/zyidbr337/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zyidbr337/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zyidbr337/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zyidbr337/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>美11月通胀达39年最高 美联储面临更大压力</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2015/08/150527231006836-600x400.jpg" />
 <h6>美国通胀在2021年11月以1982年以来最快速度增加。(Joe Raedle/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2021年12月11日讯】（大纪元记者张婷综合报导）美国劳工统计局周五（12月10日）表示，11月份通货膨胀率以1982年以来最快速度加快，不仅给经济复苏带来压力，同时也加大美联储的压力。</p>
-<p>美国劳工统计局周五报告称，在截至11月的前12个月中，衡量<ahref="https://github.com/zyidbr337/djy/blob/master/gb/tag/%E9%80%9A%E8%83%80.md#1">通胀</a>的一项关键指标，即未经季节性调整的<ahref="https://github.com/zyidbr337/djy/blob/master/gb/tag/%E6%B6%88%E8%B4%B9%E8%80%85%E4%BB%B7%E6%A0%BC.md#1">消费者价格</a>指数（CPI）上涨了6.8%，是1982年6月以来的最快速度。</p>
-<p>扣除食品和能源（其价格往往更不稳定），核心<ahref="https://github.com/zyidbr337/djy/blob/master/gb/tag/%E6%B6%88%E8%B4%B9%E8%80%85%E4%BB%B7%E6%A0%BC.md#1">消费者价格</a>指数同一时期的通货膨胀率上升了4.9%，这是自1991年6月以来的最高水平。</p>
+	<p>【大纪元2021年12月11日讯】（大纪元记者张婷综合报导）美国劳工统计局周五（12月10日）表示，11月份通货膨胀率以1982年以来最快速度加快，不仅给经济复苏带来压力，同时也加大美联储的压力。拜登总统表示，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%80%9A%E8%83%80.md#1">通胀</a>正在放缓。</p>
+<p>美国劳工统计局周五报告称，在截至11月的前12个月中，衡量<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%80%9A%E8%83%80.md#1">通胀</a>的一项关键指标，即未经季节性调整的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B6%88%E8%B4%B9%E8%80%85%E4%BB%B7%E6%A0%BC.md#1">消费者价格</a>指数（CPI）上涨了6.8%，是1982年6月以来的最快速度。</p>
+<p>扣除食品和能源（其价格往往更不稳定），核心<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B6%88%E8%B4%B9%E8%80%85%E4%BB%B7%E6%A0%BC.md#1">消费者价格</a>指数同一时期的通货膨胀率上升了4.9%，这是自1991年6月以来的最高水平。</p>
 <p>11月与10月相比，经季节性调整后的价格指数上涨了0.8%，低于10月的0.9%的增幅；如果不考虑食品和能源成本，11月的价格上涨了0.5%，比10月份的0.6%的涨幅略有下降。</p>
 <p>道琼斯估计，总体CPI的年增长率为6.7%，核心CPI为4.9%。</p>
-<p>美联储官员将<ahref="https://github.com/zyidbr337/djy/blob/master/gb/tag/%E9%80%9A%E8%83%80.md#1">通胀</a>的飙升归因于与大流行病有关的因素。消费者对商品的强劲需求和供应链瓶颈一直是主要因素，而价格上涨的力度和持久性超过了决策者的预期。</p>
+<p>美联储官员将通胀的飙升归因于与大流行病有关的因素。消费者对商品的强劲需求和供应链瓶颈一直是主要因素，而价格上涨的力度和持久性超过了决策者的预期。</p>
+<p>美国总统拜登表示，尽管11月份经历了近40年来最快速通货膨胀，但美国的价格上涨正在放缓，尤其是汽油和汽车。</p>
+<p>拜登发表声明说：“今天的数据反映了我们从全球大流行中走出来时，世界各地经济面临的压力——物价正在上涨。”</p>
 <h2>哪些产品已经变得更加昂贵</h2>
 <p>有几个类别产品的价格出现了大幅上涨。在截至11月的前12个月中，汽油价格跃升了58.1%，这是自1980年4月以来的最大跃升。</p>
 <p>追踪食品和能源的价格指数攀升至至少13年的最高点，在过去12个月期间分别上涨了6.1%和33.3%。</p>
 <p>同时，杂货的价格在同一时期增加了6.4%，这是自2008年12月以来的最大增幅。餐馆的食品价格跃升了5.8%，是1982年1月以来的最大涨幅。</p>
+<p>虽然大流行时期的通胀在很大程度上来自对汽车等产品的需求飙升，但服务通胀也一直在上升。 不包括能源在内，服务成本在11月环比上涨了0.4%，同比上涨3.4%，为 2007 年4月最快的年度增速。</p>
+<p>11月服装成本也显着上升，在假日购物季节之前，11月的环比和同比增长分别为1.3%和5%。</p>
 <p>但并不是所有产品都变得更昂贵。</p>
 <p>汽车保险价格在10月和11月之间下降了0.8%，娱乐活动和通信的价格指数也是如此，分别下降了0.2%。</p>
 <h2>通胀加剧对美联储意味着什么</h2>
@@ -24,48 +28,51 @@
 <p>价格的再次飙升增强了市场对美联储下周在今年最后一次政策会议上加快结束购债计划的预期。事实上，全球各国央行和政府都面临着越来越大的对抗通胀压力。</p>
 <p>CNN援引道明证券（TD Securities）宏观策略师的话说：“这些数据增加了美联储官员在下周FOMC（联邦公开市场委员会）会议上转向更鹰派的理由。”</p>
 <p>新浪财经援引牛津经济研究院首席美国金融经济学家凯西?博斯扬西奇（Kathy Bostjancic）的话表示，最新的通胀数据“令美联储承受更大压力”，他们处在一个非常艰难的位置上。</p>
-<p>尽管如此，策略师们预计未来一年通胀将放缓，因为重新开放、财政刺激和供应链挑战带来的价格提振开始消退。</p>
+<h2>通胀对工人造成影响</h2>
+<p>通货膨胀的压力一直在严重打击着工人。</p>
+<p>劳工部在另一份报告中说，尽管过去一年总工资增长了4.8%，但考虑到通货膨胀，实际平均时薪在11月又下降了0.4%，在过去12个月内下降了1.9%。</p>
+<p>尽管如此，策略师们预计未来一年通胀将放缓，因为重新开放、财政刺激和供应链挑战带来的价格提振开始消退。一些经济学家表示，通胀已接近顶峰，尤其是最近能源价格下跌的情况下。虽然西德克萨斯中质原油在2021年上涨了52% 以上，但价格已从11 月的最近峰值下跌了约14%。</p>
 <p>责任编辑：林妍#</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zyidbr337/djy/blob/master/gb/21/12/8/n13425014.md#1">美企计划明年大幅提高薪资</a></li>
-<li><a href="https://github.com/zyidbr337/djy/blob/master/gb/21/12/8/n13425178.md#1">专家警告：6%通胀率对普通美国人太高</a></li>
-<li><a href="https://github.com/zyidbr337/djy/blob/master/gb/21/12/10/n13428709.md#1">拜登暗示11月通胀数据可能仍然很高</a></li>
-<li><a href="https://github.com/zyidbr337/djy/blob/master/gb/21/12/10/n13428257.md#1">快餐连锁店Jack in the Box收购Del Taco</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/12/8/n13425014.md#1">美企计划明年大幅提高薪资</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/12/8/n13425178.md#1">专家警告：6%通胀率对普通美国人太高</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614842.md#1">俄乌交战下 美按揭利率骤降 房价或再创新高</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614583.md#1">职场成功 传统四年大学还是唯一途径吗？</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/22/n11539349.md#1" target="_blank">共产暴政录：从毛泽东诗词谈中共卖国</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/16/n8107028.md#1" target="_blank">澳洲出新书 探究法轮功健身奇效背后奥秘</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/8/n9937008.md#1" target="_blank">陈益南：怵目惊心！1951年的“镇反”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/20/n11267735.md#1" target="_blank">庆法轮大法日 以色列女画家感悟大法指引方向</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/zyidbr337/djy/blob/master/gb/21/12/2/n13413207.md#1">【未解之谜】发现隐形器官？！</a></li>
-<li><a href="https://github.com/zyidbr337/djy/blob/master/gb/21/12/1/n13410518.md#1">明朝三医生懂起死回生之术 淡泊名利令人敬重</a></li>
-<li><a href="https://github.com/zyidbr337/djy/blob/master/gb/21/12/4/n13417452.md#1">【舞蹈三剑客】印度舞大挑战 只排练4小时</a></li>
-<li><a href="https://github.com/zyidbr337/djy/blob/master/gb/21/12/2/n13412840.md#1">刘伯温神准预言明朝末路 又如何预言当今疫情结局？</a></li>
-<li><a href="https://github.com/zyidbr337/djy/blob/master/gb/21/12/3/n13415764.md#1">【未解之谜】百慕大三角大揭秘</a></li>
-<li><a href="https://github.com/zyidbr337/djy/blob/master/gb/21/12/10/n13428220.md#1">【方菲访谈】程翔：中共颠覆香港对国际的警示(4)</a></li>
-<li><a href="https://github.com/zyidbr337/djy/blob/master/gb/21/12/9/n13427609.md#1">【百年真相】因好色丧命 向忠发从烈士变叛徒之谜</a></li>
-<li><a href="https://github.com/zyidbr337/djy/blob/master/gb/21/12/9/n13427026.md#1">【十字路口】普京挥军乌克兰 调虎离山？</a></li>
-<li><a href="https://github.com/zyidbr337/djy/blob/master/gb/21/12/8/n13423400.md#1">爸爸姓“屎” 女儿难取名 奶奶吐两字解困</a></li>
-<li><a href="https://github.com/zyidbr337/djy/blob/master/gb/21/12/8/n13424003.md#1">“中共外交部下战书1挑110”引网民嘲讽</a></li>
-<li><a href="https://github.com/zyidbr337/djy/blob/master/gb/21/12/8/n13424653.md#1">【2021年终盘点】习近平的七只“灰犀牛”</a></li>
-<li><a href="https://github.com/zyidbr337/djy/blob/master/gb/21/12/8/n13425308.md#1">居台生活遭酸 杜汶泽回呛：不跪地舔也过得好</a></li>
-<li><a href="https://github.com/zyidbr337/djy/blob/master/gb/21/12/7/n13422942.md#1">《尚气》将拍续集 梁朝伟竞逐奥斯卡最佳男配角</a></li>
-<li><a href="https://github.com/zyidbr337/djy/blob/master/gb/21/12/7/n13422590.md#1">大陆片《亲爱的》原型认亲 女主角赵薇被噤声</a></li>
-<li><a href="https://github.com/zyidbr337/djy/blob/master/gb/21/12/8/n13423239.md#1">刘寅娜连续三年帮助失聪儿童 再捐五千万韩圜</a></li>
-<li><a href="https://github.com/zyidbr337/djy/blob/master/gb/21/12/8/n13425086.md#1">“限韩令”解除？韩片相隔6年后在中国上映</a></li>
-<li><a href="https://github.com/zyidbr337/djy/blob/master/gb/21/12/6/n13419718.md#1">让你年轻的神奇营养素 3招天天补充</a></li>
-<li><a href="https://github.com/zyidbr337/djy/blob/master/gb/21/12/6/n13419717.md#1">3大“维生素王牌”同时吃 减缓老化、防癌症</a></li>
-<li><a href="https://github.com/zyidbr337/djy/blob/master/gb/21/12/8/n13423962.md#1">组图：2021喜剧野生动物摄影获奖作品</a></li>
-<li><a href="https://github.com/zyidbr337/djy/blob/master/gb/21/12/6/n13419057.md#1">打中国灭活疫苗 和感染新冠出现相似病理变化？</a></li>
-<li><a href="https://github.com/zyidbr337/djy/blob/master/gb/21/12/8/n13424565.md#1">这时间踮脚尖最养肾 可瘦小腿、变年轻</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616642.md#1">【新闻大家谈】“取胜三关键”俄乌各占几成？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607982.md#1">迷走神经：最长脑神经 刺激它能让你更健康</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zyidbr337/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zyidbr337/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/10/n13429834.htm">美11月通胀达39年最高 美联储面临更大压力</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/10/n13429834.htm">美11月通胀达39年最高 美联储面临更大压力</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zyidbr337/djy/blob/master/gb/21/12/10/n13429834.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zyidbr337/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zyidbr337/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zyidbr337/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zyidbr337/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zyidbr337/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zyidbr337/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zyidbr337/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zyidbr337/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zyidbr337/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zyidbr337/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zyidbr337/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zyidbr337/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zyidbr337/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zyidbr337/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zyidbr337/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zyidbr337/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zyidbr337/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zyidbr337/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/zyidbr337/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zyidbr337/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zyidbr337/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zyidbr337/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zyidbr337/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zyidbr337/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/zyidbr337/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zyidbr337/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zyidbr337/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zyidbr337/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zyidbr337/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zyidbr337/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zyidbr337/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zyidbr337/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zyidbr337/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zyidbr337/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zyidbr337/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zyidbr337/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zyidbr337/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zyidbr337/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zyidbr337/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zyidbr337/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zyidbr337/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zyidbr337/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zyidbr337/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zyidbr337/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zyidbr337/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zyidbr337/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zyidbr337/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zyidbr337/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/12/10/n13429834.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
